<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_ControlStewart" Id="{f6680c9a-ba32-4cdf-b6e9-dd2896846b77}">
    <Declaration><![CDATA[TYPE ST_ControlStewart :
STRUCT
	eta : ARRAY [0..5] OF LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>