<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_TxHmi" Id="{6be351a3-497e-469d-b641-634e507bcf6c}">
    <Declaration><![CDATA[TYPE ST_TxHmi :
STRUCT
	em8000 : ST_TxHmiStewart;
	em1500 : ST_TxHmiStewart;
	comau : ST_TxHmiComau;
	winch : ST_TxHmiWinch;
	qtm : ST_TxHmiQualisys;
	phi : ARRAY [0..1] OF REAL;
	phi_t : ARRAY [0..1] OF REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>